[gd_scene load_steps=9 format=3 uid="uid://d13p82kshpmh4"]

[ext_resource type="Script" path="res://Scenes/Items/glow_stick.gd" id="1_0w8m2"]
[ext_resource type="Texture2D" uid="uid://cw4dmoxdc0oha" path="res://Art/items.png" id="1_jsxc3"]
[ext_resource type="Texture2D" uid="uid://d1ugtayr4c6cq" path="res://Art/light_small.png" id="3_5a5v5"]
[ext_resource type="Script" path="res://Scripts/flickering_light.gd" id="4_268md"]
[ext_resource type="AudioStream" uid="uid://bk71cnpdftd5c" path="res://Sounds/glowstick_bounce.wav" id="5_8m6pd"]
[ext_resource type="Script" path="res://Scripts/sound_effect_player.gd" id="6_a4ir0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x6agh"]
atlas = ExtResource("1_jsxc3")
region = Rect2(18, 0, 6, 6)

[sub_resource type="CircleShape2D" id="CircleShape2D_ko3bw"]
radius = 2.0

[node name="GlowStick" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource("1_0w8m2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -1)
texture = SubResource("AtlasTexture_x6agh")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.897655, 0.914528, 0.889346, 1)
energy = 0.4
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 9.4
texture = ExtResource("3_5a5v5")
script = ExtResource("4_268md")
speed = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ko3bw")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ko3bw")

[node name="BounceSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_8m6pd")
volume_db = 5.111
bus = &"VerbBus"
script = ExtResource("6_a4ir0")

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
